--- a/dhcp_tab.html
+++ b/dhcp_tab.html
@@ -38,15 +38,7 @@
 <TD bgcolor="#b7b7b7">Garzeens-iPad</TD>
 <TD bgcolor="#b7b7b7">192.168.1.4</TD>
 <TD bgcolor="#b7b7b7">4c:6b:e8:b0:5b:d9</TD>
-<TD bgcolor="#b7b7b7">In 0 days 23:52:20</TD>
-<TD bgcolor="#b7b7b7">Automatic</TD>
-</TR>
-
-<TR>
-<TD bgcolor="#b7b7b7">Garzeens-iPhone</TD>
-<TD bgcolor="#b7b7b7">192.168.1.6</TD>
-<TD bgcolor="#b7b7b7">b8:c1:11:b5:da:00</TD>
-<TD bgcolor="#b7b7b7">In 0 days 23:26:14</TD>
+<TD bgcolor="#b7b7b7">In 0 days 13:05:10</TD>
 <TD bgcolor="#b7b7b7">Automatic</TD>
 </TR>
 
@@ -54,7 +46,7 @@
 <TD bgcolor="#b7b7b7">Samsung-Galaxy-S8</TD>
 <TD bgcolor="#b7b7b7">192.168.1.7</TD>
 <TD bgcolor="#b7b7b7">24:18:1d:d1:1e:bd</TD>
-<TD bgcolor="#b7b7b7">In 0 days 23:25:30</TD>
+<TD bgcolor="#b7b7b7">In 0 days 13:01:50</TD>
 <TD bgcolor="#b7b7b7">Automatic</TD>
 </TR>
 
@@ -62,23 +54,7 @@
 <TD bgcolor="#b7b7b7">RedmiY1Lite-Redmisai</TD>
 <TD bgcolor="#b7b7b7">192.168.1.11</TD>
 <TD bgcolor="#b7b7b7">04:d1:3a:94:e8:3d</TD>
-<TD bgcolor="#b7b7b7">In 0 days 10:30:01</TD>
-<TD bgcolor="#b7b7b7">Automatic</TD>
-</TR>
-
-<TR>
-<TD bgcolor="#b7b7b7">LAPTOP-POSQT5F7</TD>
-<TD bgcolor="#b7b7b7">192.168.1.9</TD>
-<TD bgcolor="#b7b7b7">90:78:41:ff:c5:e9</TD>
-<TD bgcolor="#b7b7b7">In 0 days 18:18:30</TD>
-<TD bgcolor="#b7b7b7">Automatic</TD>
-</TR>
-
-<TR>
-<TD bgcolor="#b7b7b7">Omen-X</TD>
-<TD bgcolor="#b7b7b7">192.168.1.10</TD>
-<TD bgcolor="#b7b7b7">88:78:73:31:7f:c7</TD>
-<TD bgcolor="#b7b7b7">In 0 days 23:22:04</TD>
+<TD bgcolor="#b7b7b7">Expired</TD>
 <TD bgcolor="#b7b7b7">Automatic</TD>
 </TR>
 
@@ -86,7 +62,23 @@
 <TD bgcolor="#b7b7b7">Galaxy-S20</TD>
 <TD bgcolor="#b7b7b7">192.168.1.5</TD>
 <TD bgcolor="#b7b7b7">e2:a2:66:e2:02:2b</TD>
-<TD bgcolor="#b7b7b7">In 0 days 23:22:32</TD>
+<TD bgcolor="#b7b7b7">In 0 days 12:59:28</TD>
+<TD bgcolor="#b7b7b7">Automatic</TD>
+</TR>
+
+<TR>
+<TD bgcolor="#b7b7b7">Omen-X</TD>
+<TD bgcolor="#b7b7b7">192.168.1.10</TD>
+<TD bgcolor="#b7b7b7">88:78:73:31:7f:c7</TD>
+<TD bgcolor="#b7b7b7">In 0 days 23:42:20</TD>
+<TD bgcolor="#b7b7b7">Automatic</TD>
+</TR>
+
+<TR>
+<TD bgcolor="#b7b7b7">Garzeens-iPhone</TD>
+<TD bgcolor="#b7b7b7">192.168.1.6</TD>
+<TD bgcolor="#b7b7b7">b8:c1:11:b5:da:00</TD>
+<TD bgcolor="#b7b7b7">In 0 days 15:15:42</TD>
 <TD bgcolor="#b7b7b7">Automatic</TD>
 </TR>
 
@@ -94,7 +86,15 @@
 <TD bgcolor="#b7b7b7">&nbsp;</TD>
 <TD bgcolor="#b7b7b7">192.168.1.2</TD>
 <TD bgcolor="#b7b7b7">d0:04:01:6b:b0:36</TD>
-<TD bgcolor="#b7b7b7">In 0 days 23:23:00</TD>
+<TD bgcolor="#b7b7b7">In 0 days 22:09:44</TD>
+<TD bgcolor="#b7b7b7">Automatic</TD>
+</TR>
+
+<TR>
+<TD bgcolor="#b7b7b7">LAPTOP-POSQT5F7</TD>
+<TD bgcolor="#b7b7b7">192.168.1.9</TD>
+<TD bgcolor="#b7b7b7">90:78:41:ff:c5:e9</TD>
+<TD bgcolor="#b7b7b7">In 0 days 22:57:48</TD>
 <TD bgcolor="#b7b7b7">Automatic</TD>
 </TR>
 
